fixes very trippy bug on safari

--- a/assets/styles/base/variables/_breakpoints.scss
+++ b/assets/styles/base/variables/_breakpoints.scss
@@ -5,17 +5,29 @@
 /* Generic breakpoints
 ----------------------------------------------- */
 
-$s:      35rem;                 // 560px
-$sub-s:  max-width 34.9375rem;  // 559px
+$s:      560px;
+$sub-s:  max-width 559px;
 
-$m:      45rem;                 // 720px
-$sub-m:  max-width 44.9375rem;  // 719px
+$m:      720px;
+$sub-m:  max-width 719px;
 
-$l:      70rem;                 // 1120px
-$sub-l:  max-width 69.9375rem;  // 1119px
+$l:      1120px;
+$sub-l:  max-width 1119px;
 
-$xl:     90rem;                 // 1440 px
-$sub-xl: max-width 89.9375rem;  // 1399px
+$xl:     1440 px;
+$sub-xl: max-width 1399px;
+
+// $s:      35rem;                 // 560px
+// $sub-s:  max-width 34.9375rem;  // 559px
+
+// $m:      45rem;                 // 720px
+// $sub-m:  max-width 44.9375rem;  // 719px
+
+// $l:      70rem;                 // 1120px
+// $sub-l:  max-width 69.9375rem;  // 1119px
+
+// $xl:     90rem;                 // 1440 px
+// $sub-xl: max-width 89.9375rem;  // 1399px
 
 /* Content breakpoints
 ----------------------------------------------- */
